# ironbelly

./: .gitignore
fastlane/: Snapfile
ios/Ironbelly/: Info.plist
ios/Ironbelly.xcodeproj/: project.pbxproj
ios/Ironbelly.xcodeproj/xcshareddata/xcschemes/: Snapshots.xcscheme
ios/UITests/: UITests.swift
rust/: Cargo.toml
rust/src/: lib.rs
src/modules/: app.ts  wallet.ts
src/screens/Send/: main.js
