[package]
name = "ironbelly-wallet"
version = "0.1.0"
authors = ["Ivan Sorokin <ivan@sorokin.io>"]
description = "Ironbelly - Grin mobile wallet"
publish = false
edition = "2018"

[dependencies]
libc = "0.2.45"
blake2-rfc = "0.2"
chrono = "0.4.4"
clap = "2.31"
ctrlc = { version = "3.1", features = ["termination"] }
cursive = "0.9.0"
humansize = "1.1.0"
daemonize = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
log = "0.4"
term = "0.5"
prettytable-rs = "0.7"
uuid = "0.6.5"

grin_apiwallet = { path = "../../../mimblewimble/grin-wallet/apiwallet", version = "1.1.0" }
grin_libwallet = { path = "../../../mimblewimble/grin-wallet/libwallet", version = "1.1.0" }
grin_refwallet = { path = "../../../mimblewimble/grin-wallet/refwallet", version = "1.1.0" }
grin_wallet_config = { path = "../../../mimblewimble/grin-wallet/config", version = "1.1.0" }

grin_core = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
grin_keychain = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
grin_chain = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
grin_util = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
grin_api = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }
grin_store = { git = "https://github.com/mimblewimble/grin", branch = "milestone/1.1.0" }



[build-dependencies]
built = "0.3"
reqwest = "0.9"
flate2 = "1.0"
tar = "0.4"
cbindgen = "0.8.3"


[lib]
name = "wallet"
crate-type = ["staticlib"]
